<resources>
    <string name="app_name">Repository Searcher</string>
    <string name="user_search_bar_hint">Введите логин пользователя</string>
    <string name="action_menu">Action menu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="downloads">Загрузки</string>
    <string name="refresh">Обновить</string>
    <string name="close">Закрыть</string>
    <string name="repository_name">Название репозитория</string>
    <string name="description">Описание</string>
    <string name="language">Язык</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="username">Имя пользователя</string>
</resources>